fix(footer): spacing

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -81,6 +81,7 @@
 
 .lawContainer{
     display: flex;
+    width: 100%;
     justify-content: space-between;
     padding:  0 72px;
 }
